<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingBottom="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="25dp" >

    <EditText
        android:id="@+id/et_keyoboard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#000000"
        android:textCursorDrawable="@null" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/bt_send"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_style"
        android:text="@string/_send"
        android:textColor="#FFFFFF" />
    <Button
        android:id="@+id/bt_enter"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bt_send"
        android:background="@drawable/button_style"
        android:text="@string/_enter"
        android:layout_alignParentRight="true"
        android:textColor="#FFFFFF" />
    <Button
        android:id="@+id/bt_backspace"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bt_send"
        android:layout_alignParentLeft="true"
        android:background="@drawable/button_style"
        android:text="@string/_backspace"
        android:textColor="#FFFFFF" />

</RelativeLayout>